# knn_model

./: app.py  knn_data.csv  knn_model.html  pyproject.toml  svm_data.csv  svm_model.html
