[tool.poetry]
name = "knn_viz"
version = "0.1.0"
description = ""
authors = ["burtonrj <burtonrj@cardiff.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
plotly = "^5.10.0"
dash = "^2.6.1"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
